# mlb-betting

./: .gitignore  .mcp.json  CLAUDE.md  CODEBASE.md  MEMORY.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.claude/agents/: code-reviewer.md  data-engineer.md  ml-engineer.md  stats-reviewer.md
.claude/hooks/: post_tool_use.py  pre_tool_use.py  session_start.py
.claude/rules/: data.md  git.md  math.md  python.md  testing.md
.claude/skills/add-feature/: SKILL.md
.claude/skills/backtest/: SKILL.md
.claude/skills/db-migrate/: SKILL.md
.claude/skills/git-status/: SKILL.md
.claude/skills/run-pipeline/: SKILL.md
.github/workflows/: update.yml
configs/: betting_config.yaml  model_config.yaml
docs/: ARCHITECTURE.md  DATA_LEAKAGE.md  MATH_NOTES.md
mlb/: __init__.py  betting.py  calibration.py  db.py  elo.py  features.py  kalshi.py  model.py  odds_scraper.py  polymarket.py  scraper.py  statcast_enricher.py  weather.py
notebooks/: 01_data_audit.ipynb  02_feature_eda.ipynb  03_kalshi_market_analysis.ipynb  04_model_comparison.ipynb  05_betting_simulation.ipynb  06_prediction_analysis.ipynb  preliminary.ipynb
notebooks/data/: explore.sql
scripts/: gen_charts.py
tests/: conftest.py
tests/unit/: test_betting.py  test_calibration.py  test_elo.py  test_features.py  test_model.py
