[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mlb-betting"
version = "0.1.0"
description = "MLB total runs prediction and Kalshi betting system"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlb*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "ANN",  # flake8-annotations (type hints)
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "S101",    # use of assert (fine in tests)
    "S311",    # pseudo-random generators (fine for non-crypto)
    "N803",    # ML convention: X, X_train, X_test are standard names for feature matrices
    "N806",    # ML convention: X as a variable name is standard in sklearn code
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]       # relax annotations and security in tests
"notebooks/*" = ["ANN", "E402"]  # relax in notebooks

[tool.ruff.lint.isort]
known-first-party = ["mlb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ── coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["mlb"]
omit = ["tests/*", "notebooks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
